# django-cpss-vimeo

./: .travis.yml  =2.4.0  MANIFEST.in  README.md  db.sqlite3  manage.py  setup.cfg  setup.py
cpss_vimeo/: __init__.py  admin.py  apps.py  asgi.py  models.py  settings.py  tests.py  views.py  wsgi.py
django_cpss_vimeo/: __init__.py  apps.py  asgi.py  settings.py  tests.py  wsgi.py
django_cpss_vimeo/models/: vimeo.py
vimeo-django/: __init__.py  apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
vimeo-django/migrations/: 0001_initial.py
vimeo_django/: __init__.py  admin.py  asgi.py  config.py  settings.py  tests.py  urls.py  wsgi.py
vimeo_django/migrations/: 0001_initial.py
vimeo_django/models/: client.py
