[metadata]
name = Django Vimeo
version = 0.2.0
url = https://github.com/CPSSw/django-vimeo/
author = CPSS by XGDFalcon®
author_email = xgdfalcon@gmail.com
description = This is the Django component of the PyVimeo project, it implements the needed functionality to integrate PyVimeo in a Django based project.
long_description = file: README.md
license = Apache
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/CPSSw/django-vimeo/wiki/
    Funding = 
    Source = https://github.com/CPSSw/django-vimeo
    Tracker = https://github.com/CPSSw/django-vimeo/issues/

[options]
python_requires = >=3.6
packages = find:
# When the django-admin.py deprecation ends, remove "scripts".
# scripts = django/bin/django-admin.py
include_package_data = true
zip_safe = false
install_requires =
    PyVimeo >= 1.0.11
    Django >= 2.2.9


