[metadata]
name = django-vimeo
version = 2.0.0
description = This is the Django component of the PyVimeo project, it implements the needed functionality to integrate PyVimeo in a Django based project.
long_description = file: README.md
url = https://github.com/xgdfalcon/django-vimeo/
author = CPSS by XGDFalcon®
author_email = xgdfalcon@gmail.com
license = Apache
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find: